# witertools

./: README.md  pyproject.toml
src/witertools/: __init__.py  iterator_to_list.py  wrapList.py
src/witertools/itertools/: __init__.py
src/witertools/more_itertools/: __init__.py
test/: test_itertools.py  test_more_itertools.py  test_wrap_iterator.py
