[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "witertools"
authors = [{name = "Doug Ransom", email = "doug@ransom.vip"}]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
      "License :: OSI Approved :: MIT License",
      ]

[project.urls]
source="https://github.com/dougransom/witertools"

[tool.flit.sdist]
exclude=['test/']

[project.optional-dependencies]
test = [
    "pytest >=7.1.2",
    "pytest-cov",
    "more-itertools",
]
# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = " -capture=tee-sys"
testpaths = [
    "test",
 ]